--- a/apifaeterj/package.json
+++ b/apifaeterj/package.json
@@ -17,6 +17,7 @@
     "font-awesome": "^4.7.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.1",
     "typescript": "^4.7.2",
