--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apifaeterj",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Viihvq.github.io/FaeterjAcademico",
+  "homepage": "https://FaeterjAcademico.github.io/",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
