--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
+  "resolutons":{
+    "nth-check": "2.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
